--- a/.github/chatmodes/index.html
+++ b/.github/chatmodes/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <link rel="stylesheet" href="style.css">
-    <button id="reset-button">Clear</button>
+    <button id="reset-button" onclick="changeSize()">Clear</button>
     <div id="grid-container"></div>
     <script src="script.js"></script>
 </body>
