Added toggle functionality for hover mode and click mode in the Etch-a-Sketch project. Now users can switch between holding down the mouse button to draw and hovering over squares to color them. Also, added a button to change the grid size dynamically.

--- a/.github/chatmodes/index.html
+++ b/.github/chatmodes/index.html
@@ -8,6 +8,7 @@
 <body>
     <link rel="stylesheet" href="style.css">
     <button id="reset-button" onclick="changeSize()">Clear</button>
+    <button id="toggle-btn" onclick="toggleMode()">Hold/Hover</button>
     <div id="grid-container"></div>
     <script src="script.js"></script>
 </body>
