Added new features (hover mode, click mode, rainbow mode) and fixed some bugs.

--- a/.github/chatmodes/index.html
+++ b/.github/chatmodes/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <link rel="stylesheet" href="style.css">
-    <button id="reset-button" onclick="changeSize()">Clear</button>
+    <button id="clear-btn" onclick="createGrid(16)">Clear</button> </button>
+    <button id="reset-button" onclick="changeSize()">Customise grid</button>
+    <button id="rainbow-btn" onclick="toggleRGBMode()">Rainbow Mode</button>
     <button id="toggle-btn" onclick="toggleMode()">Hold/Hover</button>
     <div id="grid-container"></div>
     <script src="script.js"></script>
