Added color picker button

--- a/.github/chatmodes/index.html
+++ b/.github/chatmodes/index.html
@@ -11,6 +11,7 @@
     <button id="reset-button" onclick="changeSize()">Customise grid</button>
     <button id="rainbow-btn" onclick="toggleRGBMode()">Rainbow Mode</button>
     <button id="toggle-btn" onclick="toggleMode()">Hold/Hover</button>
+    <input type="color" id="colorPicker" value="#000000">
     <div id="grid-container"></div>
     <script src="script.js"></script>
 </body>
